feat: secondary section completa

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!--Primary section-->
 
         <section class="row">
-            <div class="col-12 col-md-6 col-lg-4 bg-light py-3">
+            <div class="col-12 col-md-6 col-lg-4 bg-light py-4">
                 <h2>Colonna 1</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum eligendi dicta numquam adipisci et
                     facere
@@ -27,7 +27,7 @@
                     corrupti
                     quod saepe?</p>
             </div>
-            <div class="col-12 col-md-6 col-lg-8 bg-secondary text-white py-3">
+            <div class="col-12 col-md-6 col-lg-8 bg-secondary text-white py-4">
                 <h2>Colonna 2</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum eligendi dicta numquam adipisci et
                     facere
@@ -36,29 +36,30 @@
                     quod saepe?</p>
             </div>
         </section>
+        
         <!--/Primary Section-->
 
         <!--Secondary Section-->
 
-        <section class="row">
-            <div class="col-4">
-                <h2>Colonna 1</h2>
+        <section class="row py-5 text-white">
+            <div class="col-6 col-md-4 py-4 bg-primary">
+                <h2>Colonna 3</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum eligendi dicta numquam adipisci et
                     facere
                     nemo nostrum temporibus, accusamus iusto possimus ipsa, in consequatur neque fugit assumenda
                     corrupti
                     quod saepe?</p>
             </div>
-            <div class="col-4">
-                <h2>Colonna 1</h2>
+            <div class="col-6 col-md-4 py-4 bg-success">
+                <h2>Colonna 4</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum eligendi dicta numquam adipisci et
                     facere
                     nemo nostrum temporibus, accusamus iusto possimus ipsa, in consequatur neque fugit assumenda
                     corrupti
                     quod saepe?</p>
             </div>
-            <div class="col-4">
-                <h2>Colonna 1</h2>
+            <div class="col-12 col-md-4 py-4 bg-danger">
+                <h2>Colonna 5</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum eligendi dicta numquam adipisci et
                     facere
                     nemo nostrum temporibus, accusamus iusto possimus ipsa, in consequatur neque fugit assumenda
@@ -66,7 +67,9 @@
                     quod saepe?</p>
             </div>
         </section>
+
         <!--/Secondary Section-->
+
     </main>
 </body>
 
