feat: final section completa

--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
                     quod saepe?</p>
             </div>
         </section>
-        
+
         <!--/Primary Section-->
 
         <!--Secondary Section-->
 
         <section class="row py-5 text-white">
             <div class="col-6 col-md-4 py-4 bg-primary">
-                <h2>Colonna 3</h2>
+                <h2>Colonna 1</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum eligendi dicta numquam adipisci et
                     facere
                     nemo nostrum temporibus, accusamus iusto possimus ipsa, in consequatur neque fugit assumenda
@@ -51,7 +51,7 @@
                     quod saepe?</p>
             </div>
             <div class="col-6 col-md-4 py-4 bg-success">
-                <h2>Colonna 4</h2>
+                <h2>Colonna 2</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum eligendi dicta numquam adipisci et
                     facere
                     nemo nostrum temporibus, accusamus iusto possimus ipsa, in consequatur neque fugit assumenda
@@ -59,7 +59,7 @@
                     quod saepe?</p>
             </div>
             <div class="col-12 col-md-4 py-4 bg-danger">
-                <h2>Colonna 5</h2>
+                <h2>Colonna 3</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum eligendi dicta numquam adipisci et
                     facere
                     nemo nostrum temporibus, accusamus iusto possimus ipsa, in consequatur neque fugit assumenda
@@ -69,6 +69,43 @@
         </section>
 
         <!--/Secondary Section-->
+
+        <!--Final Section-->
+        <section class="row py-5 text-white">
+            <div class="col-6 col-md-3 py-4 bg-info">
+                <h2>Colonna 1</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum eligendi dicta numquam adipisci et
+                    facere
+                    nemo nostrum temporibus, accusamus iusto possimus ipsa, in consequatur neque fugit assumenda
+                    corrupti
+                    quod saepe?</p>
+            </div>
+            <div class="col-6 col-md-3 py-4 bg-warning">
+                <h2>Colonna 2</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum eligendi dicta numquam adipisci et
+                    facere
+                    nemo nostrum temporibus, accusamus iusto possimus ipsa, in consequatur neque fugit assumenda
+                    corrupti
+                    quod saepe?</p>
+            </div>
+            <div class="col-6 col-md-3 py-4 bg-dark">
+                <h2>Colonna 3</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum eligendi dicta numquam adipisci et
+                    facere
+                    nemo nostrum temporibus, accusamus iusto possimus ipsa, in consequatur neque fugit assumenda
+                    corrupti
+                    quod saepe?</p>
+            </div>
+            <div class="col-6 col-md-3 py-4 bg-light text-black">
+                <h2>Colonna 4</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum eligendi dicta numquam adipisci et
+                    facere
+                    nemo nostrum temporibus, accusamus iusto possimus ipsa, in consequatur neque fugit assumenda
+                    corrupti
+                    quod saepe?</p>
+            </div>
+        </section>
+        <!--/Final Section-->
 
     </main>
 </body>
